OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c.object
<CustomObject>
    <description>Defines prerequisite relationships between External_Contact_Credential_Type__c records, ensuring certain credential types must be obtained before others can be issued. Enforces logical credential dependencies. Example: A dependency might specify that Credential_Type__c=&quot;OSHA 30 Certification&quot; requires Dependent_Credential_Type__c=&quot;OSHA 10 Certification&quot; to be completed first. This means a contact cannot obtain an OSHA 30 credential until they have an active OSHA 10 credential. The system can use these dependencies to validate credential issuance workflows and ensure contacts follow proper credential progression paths. This supports compliance requirements where advanced certifications depend on prerequisite certifications.</description>
    <label>External Credential Type Dependency</label>
    <nameField>
        <displayFormat>ECCTD-{00000}</displayFormat>
        <label>External Credential Type Dependency Numb</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Credential Type Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>