OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The ECC type that has the dependency</description>
    <label>Credential Type</label>
    <referenceTo>External_Contact_Credential_Type__c</referenceTo>
    <relationshipLabel>Credential Type Dependencies</relationshipLabel>
    <relationshipName>External_Credential_Type_Dependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>