OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c/fields/Depends_On__c.field-meta.xml
<CustomField>
    <fullName>Depends_On__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The ECC type it depends on</description>
    <label>Depends On</label>
    <referenceTo>External_Contact_Credential_Type__c</referenceTo>
    <relationshipLabel>External Credential Type Dependencies (Depends On)</relationshipLabel>
    <relationshipName>External_Credential_Type_Dependencies1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>