OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>External Credential Type Dependencies</relationshipLabel>
    <relationshipName>External_Credential_Type_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>