OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c/fields/Vendor_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Name__c</fullName>
    <formula>Vendor_Program__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Program Name</label>
    <type>Text</type>
</CustomField>