OnboardingV2Minimal/force-app/main/default/objects/External_Credential_Type_Dependency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credential_Type__c</columns>
    <columns>Depends_On__c</columns>
    <columns>Vendor_Program__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Vendor_Program_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor_Name__c</field>
        <operation>equals</operation>
        <value>Verizon</value>
    </filters>
    <label>All</label>
</ListView>